c/examples/writing-a-c-compiler-tests/tests/chapter_17/invalid_types/void/void_fun_params.c
// The standard doesn't technically prohibit void parameters
// but there is no conceivable reason to allow them
void foo(void x);

int main(void) {
    return 0;
}